CREATE TABLE Cards (
    CardID VARCHAR(255) PRIMARY KEY,
    CardName VARCHAR(255) UNIQUE,
    CardType VARCHAR(255),
    Damage INT
);


CREATE TABLE Decks (
    DeckID SERIAL PRIMARY KEY,
    Card1 VARCHAR(255) REFERENCES Cards(CardID) UNIQUE,
    Card2 VARCHAR(255) REFERENCES Cards(CardID) UNIQUE,
    Card3 VARCHAR(255) REFERENCES Cards(CardID) UNIQUE,
    Card4 VARCHAR(255) REFERENCES Cards(CardID) UNIQUE
);


CREATE TABLE Users (
    UserID SERIAL PRIMARY KEY,
    Username VARCHAR(255) UNIQUE,
    Password VARCHAR(255),
    Name VARCHAR(255),
    Token VARCHAR(255) UNIQUE,
    Coins INT,
    DeckID INT REFERENCES Decks(DeckID) UNIQUE,
    Bio TEXT,
    Image VARCHAR(255)
);



CREATE TABLE Stacks (
    StackID SERIAL PRIMARY KEY,
    UserID INT REFERENCES Users(UserID),
    CardID VARCHAR(255) REFERENCES Cards(CardID)
);


CREATE TABLE Packages (
    PackageID SERIAL PRIMARY KEY,
    Card1 VARCHAR(255) REFERENCES Cards(CardID) UNIQUE,
    Card2 VARCHAR(255) REFERENCES Cards(CardID) UNIQUE,
    Card3 VARCHAR(255) REFERENCES Cards(CardID) UNIQUE,
    Card4 VARCHAR(255) REFERENCES Cards(CardID) UNIQUE,
    Card5 VARCHAR(255) REFERENCES Cards(CardID) UNIQUE
);

