package example.com.app.models;

import lombok.Getter;
import lombok.Setter;

@Getter
@Setter
public class Battle {

    private int round;

    public void fight(Deck deck1, Deck deck2) {
    }

}
