package example.com.app.models;

public class MonsterCard extends Card {

    @Override
    public void attack() {

    }
}
